Updated Week 1 notebook with mini-project

--- a/week1-python-basics/Week1_Python_Basics.ipynb
+++ b/week1-python-basics/Week1_Python_Basics.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOtNa3MhD5Z1FMxEW+yPahu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +27,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -63,7 +62,7 @@
         "id": "0g1bfI4sd21I",
         "outputId": "ac951503-7f90-477b-97d4-c166fef70f35"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -88,7 +87,7 @@
         "id": "dr4Lh1jyeRFv",
         "outputId": "7a641653-b674-46f4-9411-359428da1874"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -116,7 +115,7 @@
         "id": "IGr9OXlxfCQf",
         "outputId": "8e9fd600-e505-4566-eaad-6c452208cc75"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -143,7 +142,7 @@
         "id": "s5qafEX_fdpm",
         "outputId": "f60676f3-d098-4ef4-e911-6e77c2a7d094"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -174,7 +173,7 @@
         "id": "m7ouwVzBgCNL",
         "outputId": "58cea001-d615-4a1c-cc2a-deaec8e2dab1"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -202,7 +201,7 @@
         "id": "unYToGlZgxII",
         "outputId": "aa44b941-45bd-420e-9815-f2da5ebbf820"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -232,7 +231,7 @@
         "id": "8YlWLXCJhjrF",
         "outputId": "4622e621-5f7b-49b0-ce6a-aa92c399391c"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -265,7 +264,7 @@
         "id": "-q3S0rWmiEL2",
         "outputId": "eff3c7a6-bb2d-4f1c-e61e-5a40df1c3d46"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -295,7 +294,7 @@
         "id": "d85islYiiFH_",
         "outputId": "1e8c760d-0eba-48ca-be9e-df298befe458"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -306,6 +305,265 @@
           },
           "metadata": {},
           "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Basic data types\n",
+        "a = 10         # int\n",
+        "b = 3.14       # float\n",
+        "c = \"Saka\"     # str\n",
+        "d = True       # bool\n",
+        "\n",
+        "print(a, b, c, d)"
+      ],
+      "metadata": {
+        "id": "hPUt4nVKgIa9",
+        "outputId": "2e9568c0-aab5-4e2b-8e7a-2df5fa8ddbfe",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10 3.14 Saka True\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Basic operators\n",
+        "x = 10\n",
+        "y = 3\n",
+        "\n",
+        "print (x + y)\n",
+        "print (x - y)\n",
+        "print (x * y)\n",
+        "print (x / y)\n",
+        "print (x % y)"
+      ],
+      "metadata": {
+        "id": "RXNPXahSgeSB",
+        "outputId": "bddec3f1-81d5-4f9d-8741-4dc73c47e4b6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "13\n",
+            "7\n",
+            "30\n",
+            "3.3333333333333335\n",
+            "1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# More functions\n",
+        "def total_contributions(goals, assists):\n",
+        "  return goals + assists\n",
+        "\n",
+        "total_contributions(14, 10)"
+      ],
+      "metadata": {
+        "id": "FyspuGAzhRNq",
+        "outputId": "f855a1e3-7679-4902-9be6-56b2c79ee309",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "24"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Mini Project\n",
+        "\n",
+        "# Create dictionary\n",
+        "player_stats = {\n",
+        "    \"name\": \"Palmer\",\n",
+        "    \"goals\": 15,\n",
+        "    \"assists\": 7,\n",
+        "    \"minutes\": 2800\n",
+        "}\n",
+        "\n",
+        "def contributions_per_90(name, goals, assists, minutes):\n",
+        "  total = goals + assists\n",
+        "  return f\"{name} contributions per 90 = {total / (minutes / 90)}\"\n",
+        "\n",
+        "gc90 = contributions_per_90(\n",
+        "    player_stats_1[\"name\"],\n",
+        "    player_stats_1[\"goals\"],\n",
+        "    player_stats_1[\"assists\"],\n",
+        "    player_stats_1[\"minutes\"]\n",
+        ")\n",
+        "\n",
+        "print(gc90)"
+      ],
+      "metadata": {
+        "id": "Bqzb3Temhfxt",
+        "outputId": "d9dee6b4-b6cd-4e96-c9a6-e03f1f89e37a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Palmer contributions per 90 = 0.7071428571428572\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Multiple values in dictionary\n",
+        "player_stats = [\n",
+        "    {\"name\": \"Palmer\", \"goals\": 15, \"assists\": 7, \"minutes\": 2800},\n",
+        "    {\"name\": \"Neto\", \"goals\": 6, \"assists\": 12, \"minutes\": 2500},\n",
+        "    {\"name\": \"Delap\", \"goals\": 9, \"assists\": 2, \"minutes\": 1900},\n",
+        "    {\"name\": \"Joao Pedro\", \"goals\": 12, \"assists\": 6, \"minutes\": 2700}\n",
+        "]\n",
+        "\n",
+        "def contributions_per_90(name, goals, assists, minutes):\n",
+        "  total = goals + assists\n",
+        "  return f\"{name} contributions per 90 = {round((total / (minutes / 90)), 2)}\"\n",
+        "\n",
+        "for p in player_stats:\n",
+        "  print(contributions_per_90(\n",
+        "      p[\"name\"],\n",
+        "      p[\"goals\"],\n",
+        "      p[\"assists\"],\n",
+        "      p[\"minutes\"]\n",
+        "  ))"
+      ],
+      "metadata": {
+        "id": "SuuetPOOkkAg",
+        "outputId": "91458237-cfa7-4a7f-8c74-e065ecaff483",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Palmer contributions per 90 = 0.71\n",
+            "Neto contributions per 90 = 0.65\n",
+            "Delap contributions per 90 = 0.52\n",
+            "Joao Pedro contributions per 90 = 0.6\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Rewriting function so it accepts entire dictionary at once\n",
+        "def contributions_per_90(player):\n",
+        "  total = player[\"goals\"] + player[\"assists\"]\n",
+        "  minutes_per_90 = player[\"minutes\"] / 90\n",
+        "  return f\"{player['name']} contributions per 90 = {round((total / minutes_per_90), 2)}\"\n",
+        "\n",
+        "# print(contributions_per_90(player_stats[0]))\n",
+        "\n",
+        "for p in player_stats:\n",
+        "  print(contributions_per_90(p))\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "f-FpDXyen014",
+        "outputId": "03d66882-3c14-4564-f5df-966e5abd328e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Palmer contributions per 90 = 0.71\n",
+            "Neto contributions per 90 = 0.65\n",
+            "Delap contributions per 90 = 0.52\n",
+            "Joao Pedro contributions per 90 = 0.6\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Storing results\n",
+        "from pprint import pprint\n",
+        "\n",
+        "results = []\n",
+        "\n",
+        "for p in player_stats:\n",
+        "  gc90 = (p[\"goals\"] + p[\"assists\"]) / (p[\"minutes\"] / 90)\n",
+        "  results.append({\"name\": p[\"name\"], \"gc90\": round(gc90, 2)})\n",
+        "\n",
+        "# pprint(results)\n",
+        "# for r in results:\n",
+        "#   print(r)\n",
+        "\n",
+        "sorted_results = sorted(results, key=lambda x: x[\"gc90\"], reverse=True)\n",
+        "for r in sorted_results:\n",
+        "  print(f\"{r['name']} - {r['gc90']} contributions per 90\")"
+      ],
+      "metadata": {
+        "id": "nSW-7qLxoKc6",
+        "outputId": "7976d078-6a97-4ccc-97cd-2d55ae201595",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Palmer - 0.71 contributions per 90\n",
+            "Neto - 0.65 contributions per 90\n",
+            "Joao Pedro - 0.6 contributions per 90\n",
+            "Delap - 0.52 contributions per 90\n"
+          ]
         }
       ]
     }
