--- a/week3-visualization/Week3_Projects.ipynb
+++ b/week3-visualization/Week3_Projects.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMDAhjARDK2VZSfYwhiiuxc",
+      "authorship_tag": "ABX9TyM8kFw6sQ36kQVUsralk1GD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,7 +40,7 @@
         "id": "V8STvWPuisdP",
         "outputId": "acffc38a-5dcd-4a35-8967-f93c2ec0b407"
       },
-      "execution_count": 335,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -71,7 +71,7 @@
         "id": "k8mAfEp-i0IZ",
         "outputId": "ddfa88ce-8f8c-4c65-c8d1-fb2ce2fc3c67"
       },
-      "execution_count": 336,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -86,7 +86,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 337,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -128,37 +128,42 @@
     {
       "cell_type": "code",
       "source": [
-        "font_paths = [\n",
-        "    \"/content/football-ds-learning/fonts/Montserrat-Regular.ttf\",\n",
-        "    \"/content/football-ds-learning/fonts/Montserrat-Medium.ttf\",\n",
-        "    \"/content/football-ds-learning/fonts/Montserrat-SemiBold.ttf\",\n",
-        "    \"/content/football-ds-learning/fonts/Montserrat-Bold.ttf\",\n",
-        "    \"/content/football-ds-learning/fonts/Montserrat-Light.ttf\",\n",
-        "]\n",
+        "# Setting plot style\n",
+        "def set_plot_style():\n",
         "\n",
-        "registered_fonts = [register_font(path) for path in font_paths]\n",
-        "registered_fonts"
+        "  # Register font files - Montserrat\n",
+        "  font_paths = [\n",
+        "      \"/content/football-ds-learning/fonts/Montserrat-Regular.ttf\",\n",
+        "      \"/content/football-ds-learning/fonts/Montserrat-Medium.ttf\",\n",
+        "      \"/content/football-ds-learning/fonts/Montserrat-SemiBold.ttf\",\n",
+        "      \"/content/football-ds-learning/fonts/Montserrat-Bold.ttf\",\n",
+        "      \"/content/football-ds-learning/fonts/Montserrat-Light.ttf\",\n",
+        "  ]\n",
+        "\n",
+        "  for path in font_paths:\n",
+        "    register_font(path)\n",
+        "\n",
+        "  # Set defaults\n",
+        "  plt.rcParams[\"font.family\"] = 'Montserrat'\n",
+        "  plt.rcParams[\"font.weight\"] = 'regular'\n",
+        "  plt.rcParams[\"figure.facecolor\"] = \"#f2f2f2\"\n",
+        "\n",
+        "  # Specific styles\n",
+        "  title_font = FontProperties(family=\"Montserrat\", weight=\"semibold\", size=44)\n",
+        "  subtitle_font = FontProperties(family=\"Montserrat\", weight=\"medium\", size=22)\n",
+        "  dot_label_font = FontProperties(family=\"Montserrat\", weight=\"medium\", size=16)\n",
+        "  axis_font = FontProperties(family=\"Montserrat\", weight=\"medium\", size=28)\n",
+        "  label_font = FontProperties(family=\"Montserrat\", weight=\"medium\", size=20)\n",
+        "  tick_font = FontProperties(family=\"Montserrat\", weight=\"regular\", size=16)\n",
+        "  footer_font = FontProperties(family=\"Montserrat\", weight=\"regular\", size=14)\n",
+        "\n",
+        "  return title_font, subtitle_font, dot_label_font, axis_font, label_font, tick_font, footer_font\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "lUGcfv0Ajaf8",
-        "outputId": "ea15b81e-a2fa-4955-a5b2-17046508779f"
+        "id": "lUGcfv0Ajaf8"
       },
-      "execution_count": 338,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "['Montserrat', 'Montserrat', 'Montserrat', 'Montserrat', 'Montserrat']"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 338
-        }
-      ]
+      "execution_count": 1,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -169,7 +174,7 @@
       "metadata": {
         "id": "e7RZQU1KkM9w"
       },
-      "execution_count": 339,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -188,7 +193,7 @@
         "id": "nmwpHuFXjY-c",
         "outputId": "8e8de427-9c0f-4039-a339-ff69c6db5fe8"
       },
-      "execution_count": 340,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -661,7 +666,7 @@
         "id": "lj5wksKSRjgm",
         "outputId": "8dd4c8fb-43d2-4400-d339-ca7c3d930c1b"
       },
-      "execution_count": 341,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1086,7 +1091,7 @@
         "id": "uTw31WzARovv",
         "outputId": "39129665-52ef-4311-f086-cc59b6c7c803"
       },
-      "execution_count": 342,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1450,7 +1455,7 @@
         "id": "UMEQo-k9VHo4",
         "outputId": "24eeaecf-db69-48f2-fa9d-e838b6665694"
       },
-      "execution_count": 343,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1472,7 +1477,7 @@
       "metadata": {
         "id": "5ZpAzOHtpziq"
       },
-      "execution_count": 344,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1581,7 +1586,7 @@
         },
         "outputId": "270556aa-0b77-444a-b291-decfafa2d535"
       },
-      "execution_count": 345,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1700,7 +1705,7 @@
       "metadata": {
         "id": "65MfiXGpYr2y"
       },
-      "execution_count": 346,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1718,7 +1723,7 @@
       "metadata": {
         "id": "PTj11kt5uf0j"
       },
-      "execution_count": 347,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1739,7 +1744,7 @@
         },
         "outputId": "8b48372b-1a59-4d59-9ce9-12f03b30fa94"
       },
-      "execution_count": 348,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2202,7 +2207,7 @@
         },
         "outputId": "1861519d-c5e5-4abc-9668-b7284d27a21a"
       },
-      "execution_count": 349,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2657,7 +2662,7 @@
       "metadata": {
         "id": "Il6EcPCF-uwH"
       },
-      "execution_count": 350,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2902,7 +2907,7 @@
       "metadata": {
         "id": "JDodv55lREna"
       },
-      "execution_count": 364,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2913,7 +2918,7 @@
       "metadata": {
         "id": "baTTqdEtsO52"
       },
-      "execution_count": 352,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2936,7 +2941,7 @@
         },
         "outputId": "ce627389-c099-4185-f85b-34e345dd3d55"
       },
-      "execution_count": 365,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2971,7 +2976,7 @@
         },
         "outputId": "f8f5d33e-bfea-4eef-9600-83d898371247"
       },
-      "execution_count": 366,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3074,7 +3079,7 @@
         "id": "esx0_g1YpaX_",
         "outputId": "9070d964-0ab5-48f7-aaa1-366abc314f9d"
       },
-      "execution_count": 355,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
