Finished optimizing code

--- a/week3-visualization/Week3_Projects.ipynb
+++ b/week3-visualization/Week3_Projects.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyODQIg6y5GeBt19az+yWM/W",
+      "authorship_tag": "ABX9TyPe0008QRpnSRqK3lNkT77u",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -90,11 +90,11 @@
         "!pip install adjustText"
       ],
       "metadata": {
-        "id": "D9sk2wuwW2zv",
-        "outputId": "fafd3513-def6-43a3-80f4-cf68b799f38d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "D9sk2wuwW2zv",
+        "outputId": "fafd3513-def6-43a3-80f4-cf68b799f38d"
       },
       "execution_count": 12,
       "outputs": [
@@ -1606,10 +1606,9 @@
         "    df_matches = pd.read_csv(url_matches, usecols=match_cols)\n",
         "\n",
         "    # Fix type mismatch\n",
-        "    df_matches[\"home_team\"] = _to_int(df_matches[\"home_team\"])\n",
-        "    df_matches[\"away_team\"] = _to_int(df_matches[\"away_team\"])\n",
-        "    df_matches[\"home_score\"] = _to_int(df_matches[\"home_score\"])\n",
-        "    df_matches[\"away_score\"] = _to_int(df_matches[\"away_score\"])\n",
+        "    for col in [\"home_team\", \"away_team\", \"home_score\", \"away_score\"]:\n",
+        "      df_matches[col] = _to_int(df_matches[col])\n",
+        "\n",
         "    df_teams[\"code\"] = _to_int(df_teams[\"code\"])\n",
         "\n",
         "    # Merge stats + players\n",
@@ -1665,7 +1664,7 @@
       "metadata": {
         "id": "mdJPPsh_ekbR"
       },
-      "execution_count": 63,
+      "execution_count": 69,
       "outputs": []
     },
     {
@@ -1683,7 +1682,7 @@
       "metadata": {
         "id": "PTj11kt5uf0j"
       },
-      "execution_count": 65,
+      "execution_count": 81,
       "outputs": []
     },
     {
@@ -1703,9 +1702,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 603
         },
-        "outputId": "7cc79495-a246-4ceb-c245-2deb4ea4e57d"
+        "outputId": "bf34c818-8ece-40a7-a59d-6271feecceee"
       },
-      "execution_count": 66,
+      "execution_count": 82,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1750,7 +1749,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-2878529c-bf80-4c53-a277-e0458d288509\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-c36b21ac-94ad-4737-8936-e3380c0814ff\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1920,7 +1919,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2878529c-bf80-4c53-a277-e0458d288509')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c36b21ac-94ad-4737-8936-e3380c0814ff')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1972,12 +1971,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-2878529c-bf80-4c53-a277-e0458d288509 button.colab-df-convert');\n",
+              "        document.querySelector('#df-c36b21ac-94ad-4737-8936-e3380c0814ff button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-2878529c-bf80-4c53-a277-e0458d288509');\n",
+              "        const element = document.querySelector('#df-c36b21ac-94ad-4737-8936-e3380c0814ff');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1997,8 +1996,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-7ab2d406-074a-40d2-b60b-fb37b078ff2a\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-7ab2d406-074a-40d2-b60b-fb37b078ff2a')\"\n",
+              "    <div id=\"df-ccc64ff9-e995-460a-9ed5-073f2c9fe961\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-ccc64ff9-e995-460a-9ed5-073f2c9fe961')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -2117,7 +2116,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-7ab2d406-074a-40d2-b60b-fb37b078ff2a button');\n",
+              "            document.querySelector('#df-ccc64ff9-e995-460a-9ed5-073f2c9fe961 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -2133,7 +2132,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 66
+          "execution_count": 82
         }
       ]
     },
@@ -2404,7 +2403,7 @@
       "metadata": {
         "id": "JDodv55lREna"
       },
-      "execution_count": 67,
+      "execution_count": 83,
       "outputs": []
     },
     {
@@ -2418,9 +2417,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 958
         },
-        "outputId": "9064f99d-3af8-41cb-9c72-9354a4882290"
+        "outputId": "206d28a6-bdfd-4119-8723-43bae4048328"
       },
-      "execution_count": 68,
+      "execution_count": 84,
       "outputs": [
         {
           "output_type": "display_data",
